# stm32-rs

./: Cargo.toml  README.md  justfile  openocd.cfg  stm32f103c8t6.cfg
doc/STM32F4 Embedded Rust at the PAC/: 1. svd2rust.mht  2. GPIO Control.mht  3. System Clock Configuration.mht  4. SysTick Delay.mht  5. UART Communication.mht  6. GPIO Interrupts.mht  7. Creating Hardware Abstractions.mht  8. Creating Hardware Abstractions with embedded-hal.mht
src/: main.rs
