[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.1"

[dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[dependencies.stm32f103]
path = "../stm32f103"
features = ["rt", "critical-section"]